--- a/html/about.html
+++ b/html/about.html
@@ -21,7 +21,7 @@
     <title>About</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html"
           ><img
